EC2VM_Creation_ByTerraformScript_WithoutHardcode_AccessKey_SecretKey.tf
provider "aws" {
    region="ap-south-1"
}

resource "aws_instance" "MyAWSVM" {
    ami="ami-03793655b06c6e29a"
	instance_type="t3.micro"
	key_name="AWS-1stKeyPair-2026"
	vpc_security_group_ids=["sg-01911be532bafb8c7"]
	tags={
	    Name="EC2 VM by Terraform script without hardcode of Access Key and Secret Key"
	}
}
/*
Here we can avoid this hardcooding of both Access keya nd secret access key
----------------------------------------------------------------------------------
1. By exporting AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY which will work for that session only.
2. By adding below export commands in .bashrc file which will work permanenetly.
----------------------------------------------------------------------------------------

1. By exporting AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY which will work for that session only.
--------------------------------------------------------------------------------------------------------------
│ Error: creating EC2 Instance: operation error EC2: RunInstances, https response error StatusCode: 403, RequestID: 08029a71-b9d5-466d-a865-61638feba2dd, api error UnauthorizedOperation: You are not authorized to perform this operation. User: arn:aws:iam::966994807536:user/Anup is not authorized to perform: ec2:RunInstances on resource: arn:aws:ec2:ap-south-1:966994807536:instance/* with an explicit deny in an identity-based policy: arn:aws:iam::aws:policy/AWSCompromisedKeyQuarantineV3. Encoded  [...]
│
│   with aws_instance.MyAWSVM,
│   on EC2VM_Creation_ByTerraformScript_WithoutHardcode_AccessKey_SecretKey.tf line 5, in resource "aws_instance" "MyAWSVM":
│    5: resource "aws_instance" "MyAWSVM" {
------
I will set these 2 variables in my server by export variablesexport AWS_ACCESS_KEY_ID="AKIA6CJLBZLYLKZYTD5P"
export AWS_SECRET_ACCESS_KEY="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"

[ec2-user@ip-172-31-38-29 ex-2]$ export AWS_ACCESS_KEY_ID="AKIA6CJLBZLYLKZYTD5P"
[ec2-user@ip-172-31-38-29 ex-2]$ export AWS_SECRET_ACCESS_KEY="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"
[ec2-user@ip-172-31-38-29 ex-2]$
[ec2-user@ip-172-31-38-29 ex-2]$ echo $AWS_ACCESS_KEY_ID
AKIA6CJLBZLYLKZYTD5P
[ec2-user@ip-172-31-38-29 ex-2]$ echo AWS_SECRET_ACCESS_KEY
AWS_SECRET_ACCESS_KEY
[ec2-user@ip-172-31-38-29 ex-2]$ echo $AWS_SECRET_ACCESS_KEY
f3iANzBhwdAM2Ad/VVYPfsMXrqElW59IY0adLcQo

then

Remove the "Quarantine" Policy
If you still get the error after using new keys, your IAM User might still have that Quarantine policy attached to it.

In the IAM Console for user Anup, check the Permissions tab.

If you see AWSCompromisedKeyQuarantineV3, Remove it. (Note: You may need to log in as the Root user to remove this if your Anup user doesn't have permission).

*/
